--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,14 @@
+blinker==1.9.0
+click==8.3.0
+colorama==0.4.6
 Flask==3.1.2
-Werkzeug==3.1.3
-Pillow==12.0.0
-python-dotenv==1.2.1
 Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+pillow==12.0.0
+python-dotenv==1.2.1
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+Werkzeug==3.1.3
