feat: Adicionar tamanhos GG1, GG2, GG3 e melhorias gerais
- Adicionar novos tamanhos no painel admin (GG1, GG2, GG3)
- Adicionar imagem da autora na pagina Sobre Mim
- Criar README.md completo com documentacao do projeto
- Criar .gitignore para proteger arquivos sensiveis
- Organizar documentacao em pasta app/docs/
- Remover imagens de exemplo do template nao utilizadas
- Remover scripts de migracao (ja aplicados)
- Adicionar .gitkeep na pasta uploads
- Limpar estrutura do projeto para entrega

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-# Ambiente Virtual Python
-venv/
-env/
-.venv/
-ENV/
-
-# Banco de Dados
-instance/
-*.db
-*.sqlite
-*.sqlite3
-
 # Python
 __pycache__/
 *.py[cod]
@@ -17,35 +5,30 @@ __pycache__/
 *.so
 .Python
 
+# Ambientes virtuais
+venv/
+env/
+ENV/
+.venv
+
 # Flask
 instance/
-.webassets-cache
+.env
+*.db
 
-# Uploads de usuários
-app/static/uploads/*
-!app/static/uploads/.gitkeep
-
-# IDEs e Editores
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-.DS_Store
 
 # Sistema Operacional
-Thumbs.db
 .DS_Store
+Thumbs.db
+
+# Uploads (ignorar imagens mas manter a estrutura)
+app/static/uploads/*
+!app/static/uploads/.gitkeep
 
 # Logs
 *.log
-
-# Variáveis de ambiente
-.env
-.env.local
-*.env
-
-# Arquivos temporários
-*.tmp
-*.bak
-*.cache
