Clean env defaults and set admin password placeholder

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,26 @@
 # ==========================================
-# VARIÁVEIS DE AMBIENTE - XODÓ DA PRETA
+# VARIAVEIS DE AMBIENTE - Xodo da Preta
 # ==========================================
 #
-# INSTRUÇÕES:
+# INSTRUCOES:
 # 1. Copie este arquivo para .env
-# 2. Preencha com valores reais
-# 3. NUNCA commite o arquivo .env no Git
+# 2. Preencha com valores reais (nunca commitar valores sensiveis)
+# 3. Configure ADMIN_PASSWORD via variavel de ambiente no deploy
 #
 # ==========================================
 
-# SEGURANÇA
-# Chave secreta para sessões Flask (OBRIGATÓRIO)
+# SEGURANCA
+# Chave secreta para sessoes Flask (OBRIGATORIO)
 # Gere uma chave forte com: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=sua-chave-secreta-de-64-caracteres-aqui
 
-# ADMIN - Credenciais do primeiro usuário administrador (OBRIGATÓRIO)
+# ADMIN - Credenciais do primeiro usuario administrador (OBRIGATORIO)
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=Sua$enhaForte123!
+# Defina a senha em tempo de deploy/export e nao deixe neste arquivo versionado
+ADMIN_PASSWORD=defina_no_deploy
 
 # AMBIENTE
-# Opções: development, production
+# Opcoes: development, production
 FLASK_ENV=development
 
 # DEBUG
@@ -27,5 +28,6 @@ FLASK_ENV=development
 FLASK_DEBUG=True
 
 # BANCO DE DADOS
-# SQLite é usado por padrão, o arquivo será criado em instance/loja.db
-# Para produção, considere PostgreSQL ou MySQL
+# SQLite eh usado por padrao, o arquivo sera criado em instance/loja.db
+# Para producao, considere PostgreSQL ou MySQL
+
